# raise

./: .gitignore  Cargo.toml  README.md  design.md
examples/: init_test.rs  mnist.rs  tensor_math.rs
src/: lib.rs  main.rs  tensor.rs  tensor_view.rs
src/activiations/: mod.rs  mrelu.rs  relu.rs
src/data/: dataloader.rs  dataset.rs  loader.rs  mod.rs  plot.rs  sampler.rs
src/layers/: layer.rs  linear.rs  mod.rs  print.rs  sequential.rs
src/losses/: cross_entropy.rs  loss.rs  mod.rs  mse.rs
src/network/: network.rs
src/ops/: ops.rs
src/optimizers/: optimizer.rs  sgd.rs
