[package]
name = "raise"
version = "0.1.0"
authors = ["Alexander Keijzer <alexanderkeijzer@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand="0.7.3"
rand_distr = "0.2.2"
dyn-clone = "1.0.1"
inline-python = "0.5.1"
raise-graph = { path = "../raise-graph" }

[dev-dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }

[profile.release]
debug = true